k8s/testing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-ventas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-ventas
  template:
    metadata:
      labels:
        app: back-ventas
    spec:
      containers:
        - name: back-ventas
        # Pendiente: utilizar forma de no hardcodear la imagen y actualizar versiones
          image: southamerica-east1-docker.pkg.dev/construtem/microservicios-construtem/back-ventas:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          # Aqui se muestran las variables de entorno que se definieron en los secretos
          # Especificamente se encuentran solo las de la base de datos
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
